# risingwave-connect-py

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  test_imports.py
.github/prompts/: risingwave-connect.prompt.md  risingwave-pipeline-sdk.prompt.md
.github/workflows/: publish.yml
examples/: advanced_postgres_cdc.py  basic_postgres_cdc.py  complete_cdc_iceberg_pipeline.py  complete_pipeline_with_sinks.py  complete_sink_management.py  elasticsearch_sink_example.py  env_config_example.py  iceberg_object_storage_examples.py  iceberg_sink_example.py  interactive_discovery.py  kafka_source_example.py  mongodb_cdc_example.py  mysql_cdc_example.py  postgres_cdc_iceberg_pipeline.ipynb  postgres_cdc_iceberg_pipeline.py  sqlserver_cdc_example.py  table_column_filtering_example.py
src/risingwave_connect/: __init__.py  client.py  connect_builder.py  models.py  pipeline_builder.py
src/risingwave_connect/builders/: __init__.py  base.py  kafka.py  mongodb.py  mysql.py  postgresql.py  sinks.py  sqlserver.py
src/risingwave_connect/discovery/: __init__.py  base.py
src/risingwave_connect/sinks/: __init__.py  base.py  elasticsearch.py  iceberg.py  postgresql.py  s3.py
src/risingwave_connect/sources/: __init__.py  kafka.py  mongodb.py  mysql.py  postgresql.py  sqlserver.py
src/risingwave_pipeline_sdk/: __init__.py  cli.py  client.py  models.py  pipeline_builder.py  pipeline_orchestrator.py
src/risingwave_pipeline_sdk/discovery/: base.py
src/risingwave_pipeline_sdk/pipelines/: __init__.py  postgres_cdc.py
src/risingwave_pipeline_sdk/sinks/: __init__.py  base.py  iceberg.py  s3.py  templates.py
src/risingwave_pipeline_sdk/sources/: __init__.py  postgresql.py  templates.py
src/rw_pg_cdc/: sql.py
tests/: test_iceberg_sink.py  test_mongodb_source.py  test_sql.py  test_sqlserver_source.py
