[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = ["/.git", "/venv", "/.venv", "/examples"]

[tool.hatch.build.targets.wheel]
packages = ["src/risingwave_connect"]

[project]
name = "risingwave-connect-py"
version = "0.2.5"
description = "Python SDK for integrating RisingWave with various CDC sources (like PostgreSQL) and supporting multiple sink destinations such as Iceberg and S3."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Yuxuan Liao", email = "yuxuan@risingwave-labs.com" }]
keywords = [
    "risingwave",
    "risingwave-connect",
    "risingwave-connect-py",
    "risingwave_connect",
    "risingwave_connect_py",
    "cdc",
    "data-connector",
    "postgresql",
    "streaming",
    "iceberg",
    "s3",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
]
dependencies = ["psycopg[binary]>=3.1", "pydantic>=2.7"]

[project.urls]
Homepage = "https://github.com/risingwavelabs/risingwave-connect-py"
Repository = "https://github.com/risingwavelabs/risingwave-connect-py"
Issues = "https://github.com/risingwavelabs/risingwave-connect-py/issues"
[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "build>=1.0.0",
    "twine>=4.0.0",
]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py310"
